[package]
name = "nailgun_process_manager"
version = "0.1.0"
authors = ["Borja Lorente <bescobar@twitter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashing = { path = "../hashing" }
process_execution = { path = "../process_execution" }
sysinfo = "0.9.5"
