[package]
name = "ui"
version = "0.0.1"
authors = [ "Pants Build <pantsbuild@gmail.com>" ]

[lib]
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "test/demo.rs"

[dependencies]
rand = "0.5.1"
#termion = "1.5.1"
termion = { git = "https://github.com/redox-os/termion.git", rev = "ce6b43d071cd6edfc4b366bb945b45e06c239e2c" }
unicode-segmentation = "1.2.1"
parking_lot = "0.6"
log = "0.4"
lazy_static = "1"
num_enum = "0.1.1"